# backend/openapi/swagger.json
@@ -2252,6 +2252,10 @@
             "type": "string",
             "format": "uuid",
             "nullable": true
+          },
+          "narrative": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2832,6 +2836,11 @@
           },
           "preferences": {
             "$ref": "#/components/schemas/PreferencesInputDto"
+          },
+          "narrative": {
+            "maxLength": 1000,
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
